<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/my_friends" />
        <item
            android:id="@+id/nav_invitation"
            android:icon="@drawable/ic_friends"
            android:title="@string/invitation" />
        <item
            android:id="@+id/nav_friends_search"
            android:icon="@drawable/ic_friends"
            android:title="@string/friends_search" />
    </group>
</menu>