<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:padding="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/change_profile_avatar"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:src="@mipmap/ic_person"/>

            <TextView
                android:id="@+id/my_profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/username_placeholder"
                android:textColor="@color/textColorPrimary"
                android:layout_marginStart="23dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/change_profile_avatar"/>
        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginBottom="-43dp"
        android:src="@mipmap/ic_talker"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            android:src="@mipmap/ic_talker"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/padding_standard"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/change_profile_usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/username_placeholder"
                    android:drawablePadding="@dimen/padding_standard"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/textColorDarker"
                    android:textColor="@color/textColorPrimary"
                    android:drawableStart="@drawable/ic_user"
                    android:layout_marginTop="@dimen/margin_standard"/>

                <EditText
                    android:id="@+id/change_profile_emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:drawablePadding="@dimen/padding_standard"
                    android:textColorHint="@color/textColorDarker"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_placeholder"
                    android:textColor="@color/textColorPrimary"
                    android:drawableStart="@android:drawable/sym_action_email"
                    android:layout_marginTop="@dimen/margin_standard"/>

                <EditText
                    android:id="@+id/change_profile_passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:drawablePadding="@dimen/padding_standard"
                    android:inputType="textPassword"
                    android:hint="@string/password_placeholder"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorDarker"
                    android:drawableStart="@android:drawable/ic_lock_idle_lock"
                    android:layout_marginTop="@dimen/margin_standard"/>

                <EditText
                    android:id="@+id/change_profile_password_ConfirmInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:drawablePadding="@dimen/padding_standard"
                    android:inputType="textPassword"
                    android:hint="@string/password_confirm_placeholder"
                    android:textColor="@color/textColorPrimary"
                    android:drawableStart="@android:drawable/ic_lock_idle_lock"
                    android:textColorHint="@color/textColorDarker"
                    android:layout_marginBottom="@dimen/margin_standard"
                    android:layout_marginTop="@dimen/margin_standard"/>

                <Button
                    android:id="@+id/change_profile_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_standard"
                    android:background="@color/colorAccent"
                    android:text="@string/apply_changes"
                    android:textAllCaps="false"
                    android:textColor="@color/textColorPrimary"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>